# cortexLLM

./: CMakeLists.txt  Makefile  README.md
cmake/: CortexOptions.cmake  build-info.cmake  common.cmake  cortex-config.cmake.in  cortex.pc.in
include/: cortex_llm.h  gguf-loader.h  gguf_loader.h
pkg/ggml/: CMakeLists.txt
src/: CMakeLists.txt  gguf-loader.cpp  gguf_loader.c  gguf_token.cpp  gguf_token.h  inference.c  main.c  main.cpp  model_loader.c  tokenizer.c
utils/: CMakeLists.txt  chat_template.cpp  chat_template.h  log.cpp  log.h
